Add connection to local mongoDb and endpoint to save feedbacks in it
# Conflicts:
#	src/main/java/com/aubay/formations/nr/WebApplication.java
#	src/main/java/com/aubay/formations/nr/config/WebSecurityConfig.java
#	src/main/resources/application.yaml
#	src/main/resources/swagger/api.yaml
